Turn: Using opencv in the frontend and sending the tensors/hash to the secure world

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -31,7 +31,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  image_picker: ^0.8.4+3  
+  image_picker: ^0.8.4+3
+  opencv_4: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
