--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   image_picker: ^0.8.4+3
-  opencv_4: ^1.0.0
+  google_ml_vision: ^0.0.8
 
 
   # The following adds the Cupertino Icons font to your application.
