--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   image_picker: ^0.8.4+3
   google_ml_vision: ^0.0.8
+  camera: ^0.10.5+9
 
 
   # The following adds the Cupertino Icons font to your application.
